test/test_suite/errors/anyerr_void.c3t
fault MyError
{
    FOO,
    BAR
}
fn void! errorThing()
{
    return MyError.BAR!;
}

fn void! errorThing2()
{
    return;
}

extern fn void printf(char*, ...);
fn void main()
{
    anyerr z = errorThing();
    printf("Z;   %llx\n", (iptr)(z));
    printf("BAR: %llx\n", (iptr)(MyError.BAR));
    printf("FOO: %llx\n", (iptr)(MyError.FOO));
    z = errorThing2();
    printf("Z2:  %llx\n", (iptr)(z));
}

/* #expect: anyerr_void.ll

define i64 @anyerr_void_errorThing() #0 {
entry:
  ret i64 ptrtoint (ptr @"anyerr_void_MyError$BAR" to i64)
}

; Function Attrs: nounwind
define i64 @anyerr_void_errorThing2() #0 {
entry:
  %reterr = alloca i64, align 8
  ret i64 0
}

; Function Attrs: nounwind
declare void @printf(ptr, ...) #0

; Function Attrs: nounwind
define void @anyerr_void_main() #0 {
entry:
  %z = alloca i64, align 8
  %error_var = alloca i64, align 8
  %error_var1 = alloca i64, align 8
  store i64 0, ptr %error_var, align 8
  %0 = call i64 @anyerr_void_errorThing()
  %not_err = icmp eq i64 %0, 0
  %1 = call i1 @llvm.expect.i1(i1 %not_err, i1 true)
  br i1 %1, label %after_check, label %assign_optional

assign_optional:                                  ; preds = %entry
  store i64 %0, ptr %error_var, align 8
  br label %noerr_block

after_check:                                      ; preds = %entry
  br label %noerr_block

noerr_block:                                      ; preds = %after_check, %assign_optional
  %2 = load i64, ptr %error_var, align 8
  store i64 %2, ptr %z, align 8
  %3 = load i64, ptr %z, align 8
  call void (ptr, ...) @printf(ptr @.str, i64 %3)
  call void (ptr, ...) @printf(ptr @.str.2, i64 ptrtoint (ptr @"anyerr_void_MyError$BAR" to i64))
  call void (ptr, ...) @printf(ptr @.str.3, i64 ptrtoint (ptr @"anyerr_void_MyError$FOO" to i64))
  store i64 0, ptr %error_var1, align 8
  %4 = call i64 @anyerr_void_errorThing2()
  %not_err2 = icmp eq i64 %4, 0
  %5 = call i1 @llvm.expect.i1(i1 %not_err2, i1 true)
  br i1 %5, label %after_check4, label %assign_optional3

assign_optional3:                                 ; preds = %noerr_block
  store i64 %4, ptr %error_var1, align 8
  br label %noerr_block5

after_check4:                                     ; preds = %noerr_block
  br label %noerr_block5

noerr_block5:                                     ; preds = %after_check4, %assign_optional3
  %6 = load i64, ptr %error_var1, align 8
  store i64 %6, ptr %z, align 8
  %7 = load i64, ptr %z, align 8
  call void (ptr, ...) @printf(ptr @.str.4, i64 %7)
  ret void
}